--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # ----
 # Site
 
-title: Cause Template
+#title: Buzz Tender
 url: https://clean-oryx.cloudvent.net
 baseurl:
 google_analytics_key:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
-logo: /siteicon.png
+logo: "/images/Final Logos_Icon_Full Color.png"
 description: Jekyll template with example content for a not-for-profit organisation.
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Cause Template
+  name: BuzzTender
   links:
     - https://github.com/CloudCannon/cause-jekyll-template
 
