--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,5 +1,5 @@
-company_name: BuzzTender LLP
-mission_statement: BuzzTender LLP is a Social Networking Platform created to Connect, Compete & Repeat 
+company_name: BuzzTender
+mission_statement: BuzzTender is a Social Networking Platform created to Connect, Compete & Repeat 
 address: Raleigh, North Carolina
 phone: +1 763 568 2284
 email: allie@buzztender.app
