--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,8 +1,9 @@
 company_name: BuzzTender
 mission_statement: BuzzTender is a Social Networking Platform created to Connect, Compete & Repeat 
 address: Raleigh, North Carolina
-phone: +1 763 568 2284
-email: allie@buzztender.app
-facebook: CloudCannon
-twitter: CloudCannon
-youtube: CloudCannon
+#phone: +1 763 568 2284
+email: admin@buzztender.app
+facebook: BuzzTenderEvents
+twitter: buzztender
+youtube: buzztender
+instagram: buzztenderapp
