Added legal stuff

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,7 +1,7 @@
 company_name: BuzzTender
 mission_statement: BuzzTender is a Social Networking Platform created to Connect, Compete & Repeat 
 address: Raleigh, North Carolina
-#phone: +1 763 568 2284
+legal: Legal
 email: admin@buzztender.app
 facebook: BuzzTenderEvents
 twitter: buzztender
